syntax = "proto3";

package NAlice.NData.NMusic;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/music";
option java_package = "ru.yandex.alice.protos.data.scenario.music";

import "mapreduce/yt/interface/protos/extension.proto";

message TContentId {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    enum EContentType {
        Track = 0;
        Album = 1;
        Artist = 2;
        Playlist = 3;
        Radio = 4;
        Generative = 5;
        FmRadio = 6;
    }

    EContentType Type = 1 [json_name = "type", (NYT.column_name) = "type"];
    string Id = 2 [json_name = "id", (NYT.column_name) = "id"];
    repeated string Ids = 3 [json_name = "ids", (NYT.column_name) = "ds"]; // some types (as Radio) have multiple ids
}
